Afegida informació a la página de marcas

--- a/app/marcas.html
+++ b/app/marcas.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Marcas destacadas</title>
     <link rel="stylesheet" href="/../public/css/styles.css">
 </head>
 <body>
-        <header>
+    <header>
         <div class="container">
             <div id="branding">
                 <h1>Marcas destacadas</h1>
@@ -23,5 +23,40 @@
             </nav>
         </div>
     </header>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Marcas destacadas de nuestra selección</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">
+                En este apartado encontraras las marcas más reconocidas y confiables en el mundo de las bicicletas, cada una con su propia historia y especialización.
+            </p>
+    </section>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Stivens</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">Stivens ofrece una excelente relación calidad-precio y es reconocida por su durabilidad en entornos urbanos y recreativos. Su accesibilidad de repuestos y amplia presencia local hacen que sea una opción confiable para quienes buscan una bicicleta práctica y fácil de mantener.</p>
+        </section>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Scott</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">Scott es sinónimo de innovación y rendimiento, con una fuerte trayectoria en mountain bike y competición. Su enfoque en I+D y la calidad de sus componentes garantizan fiabilidad y excelente comportamiento tanto para aficionados exigentes como para profesionales.</p>
+        </section>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Orbea</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">Orbea, con raíces españolas, destaca por la atención al detalle y la personalización de sus modelos. Su reputación en fabricación y el soporte postventa local hacen que sea una marca de confianza para quienes buscan calidad y opciones adaptadas al ciclista.</p>
+        </section>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Specialized</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">Specialized es una marca líder conocida por su innovación, ergonomía y enfoque en el rendimiento del usuario. Su amplia red de distribuidores y el respaldo técnico ofrecen seguridad y garantías de mantenimiento a largo plazo.</p>
+        </section>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Trek</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">Trek combina diseño sólido con controles de calidad estrictos y una gama amplia para todos los niveles. Su presencia global y servicio de atención al cliente hacen que sea una elección confiable para ciclistas que buscan respaldo y disponibilidad de piezas.</p>
+        </section>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Giant</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">Giant, como uno de los mayores fabricantes del mundo, destaca por su capacidad de producción y control de calidad. Ofrece buena relación calidad-precio y fiabilidad constante, respaldada por procesos industriales maduros.</p>
+        </section>
+    <section class="hero bg-gray-100 py-12 text-center">
+            <h1 class="text-4xl font-bold text-blue-700">Cannondale</h1>
+            <p class="mt-4 text-lg text-gray-700 max-w-2xl mx-auto">Cannondale es conocida por su ingeniería avanzada y modelos orientados al rendimiento. La calidad de sus materiales y su espíritu innovador la convierten en una opción fiable para quienes valoran la tecnología y la resistencia en la bicicleta.</p>
+        </section>
+    
 </body>
 </html>
